--- a/astrogrid/datacenter/server/src/java/org/astrogrid/datacenter/queriers/mssqlserver/package.html
+++ b/astrogrid/datacenter/server/src/java/org/astrogrid/datacenter/queriers/mssqlserver/package.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-Database Querier implementation for Microsoft SQL Server.
+Backend Plugin for  Microsoft SQL Server databases.
 </body>
 </html>
