--- a/astrogrid/datacenter/server/src/java/org/astrogrid/datacenter/queriers/mysql/package.html
+++ b/astrogrid/datacenter/server/src/java/org/astrogrid/datacenter/queriers/mysql/package.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-The implementation of the database queryer for the MySQL database.
+Backend Plugin for  <a href="www.mysql.com">MySQL</a> databases.
 </body>
 </html>
