--- a/astrogrid/datacenter/server/src/java/org/astrogrid/datacenter/service/package.html
+++ b/astrogrid/datacenter/server/src/java/org/astrogrid/datacenter/service/package.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-Handles the service end of the datacenter - the connections to the clients, and managing the service instances.
+Implements the datacenter web service.
+
 </body>
 </html>
