get rid of some localhost references

--- a/astrogrid/applications/src/webapp/index.html
+++ b/astrogrid/applications/src/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-<!-- $Id: index.html,v 1.4 2004/01/09 00:25:08 pah Exp $ --><!-- this is a bit of a hack - it should be generated during the site build so
+<!-- $Id: index.html,v 1.5 2004/01/17 00:24:23 pah Exp $ --><!-- this is a bit of a hack - it should be generated during the site build so
 that the styles are correct -->
   <title>AstroGrid Project - AstroGrid Applications Integration</title>
   <style type="text/css">
@@ -79,9 +79,9 @@ which need to be followed
 before trying to invoke the service. <br>
         </li>
         <li><a
- href="http://localhost:8080/manager/html/reload?path=/astrogrid-applications">restart
+ href="/manager/html/reload?path=/astrogrid-applications">restart
           </a>the application in the <a
- href="http://localhost:8080/manager/html">tomcat manager</a>.<br>
+ href="/manager/html">tomcat manager</a>.<br>
         </li>
         <li>You can then check your <a href="check_config.jsp">configuration</a></li>
         <li>There is a test application in the <a href="test">test
@@ -97,7 +97,7 @@ that the command line application controller can run, however. <br>
  href="maven/index.html">Maven
 documentation</a> for this ApplicationController service. </p>
 <h4>Using the Service</h4>
-<p>It is possible to call the service directly, with a knowledge of the <a href="http://localhost:8080/astrogrid-applications/services/ApplicationControllerService?wsdl">wsdl</a>, but if you are programming in java, then you might find it easier to use the delegate contained in the <a href="ApplicationControllerDelegate.jar">this jar</a>.
+<p>It is possible to call the service directly, with a knowledge of the <a href="/astrogrid-applications/services/ApplicationControllerService?wsdl">wsdl</a>, but if you are programming in java, then you might find it easier to use the delegate contained in the <a href="ApplicationControllerDelegate.jar">this jar</a>.
       </div>
       </div>
       </div>
