result of merge from Itn05Start

--- a/astrogrid/applications/src/java/org/astrogrid/applications/avodemo/package.html
+++ b/astrogrid/applications/src/java/org/astrogrid/applications/avodemo/package.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 <!-- $Id: package.html,v 1.2 2004/02/02 16:49:44 pah Exp $ -->
-<title>Applications</title>
+<title>AVO Demo</title>
   <meta http-equiv="Content-Type"
  content="text/html; charset=ISO-8859-1"/>
 </head>
-<body></body>
+<body>
+	<p>This package contains helper objects to allow the AVO Demo Jan 2004 to run - it has had to cut some corners to make the demo work and as such there is nothing here that should really be used in production environments
+		</p>
+</body>
 </html>
