--- a/astrogrid/applications/src/java/org/astrogrid/applications/commandline/dft/package.html
+++ b/astrogrid/applications/src/java/org/astrogrid/applications/commandline/dft/package.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 <!-- $Id: package.html,v 1.2 2004/02/02 16:49:44 pah Exp $ -->
-<title>Applications</title>
+<title></title>
   <meta http-equiv="Content-Type"
  content="text/html; charset=ISO-8859-1"/>
 </head>
-<body></body>
+<body>
+	<p>Specializations of the command line application model for the data federation tool.
+		</p>
+</body>
 </html>
