--- a/astrogrid/applications/src/java/org/astrogrid/applications/commandline/hyperz/package.html
+++ b/astrogrid/applications/src/java/org/astrogrid/applications/commandline/hyperz/package.html
@@ -2,9 +2,13 @@
 <html>
 <head>
 <!-- $Id: package.html,v 1.2 2004/02/02 16:49:44 pah Exp $ -->
-<title>Applications</title>
+<title>HyperZ</title>
   <meta http-equiv="Content-Type"
  content="text/html; charset=ISO-8859-1"/>
 </head>
-<body></body>
+<body>
+	<p>Specializations of the command line model for the hyperz tool
+		</p>
+		<p>See <a href="http://webast.ast.obs-mip.fr/hyperz/">here</a> for more details on hyperZ</p>
+</body>
 </html>
