--- a/astrogrid/applications/src/java/org/astrogrid/applications/overview.html
+++ b/astrogrid/applications/src/java/org/astrogrid/applications/overview.html
@@ -1,1 +1,10 @@
-This component deals with application Integration. You access it mainly via the 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+<head>
+<!-- $Id: overview.html,v 1.2 2004/02/02 16:49:44 pah Exp $ -->
+<title>Applications</title>
+  <meta http-equiv="Content-Type"
+ content="text/html; charset=ISO-8859-1"/>
+</head>
+<body></body>
+</html>
