--- a/astrogrid/applications/src/java/org/astrogrid/applications/common/config/package.html
+++ b/astrogrid/applications/src/java/org/astrogrid/applications/common/config/package.html
@@ -1,1 +1,13 @@
-Classes to deal with the configuration of the application controller
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+<head>
+<!-- $Id: package.html,v 1.2 2004/02/02 16:49:44 pah Exp $ -->
+<title></title>
+  <meta http-equiv="Content-Type"
+ content="text/html; charset=ISO-8859-1"/>
+</head>
+<body>
+	<p>Classes to deal with the configuration of the application controller
+		</p>
+</body>
+</html>
