--- a/astrogrid/applications/src/java/org/astrogrid/applications/package.html
+++ b/astrogrid/applications/src/java/org/astrogrid/applications/package.html
@@ -1,10 +1,11 @@
+<?xml version="1.0" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-<!-- $Id: package.html,v 1.2 2004/02/02 16:49:44 pah Exp $ -->
+<!-- $Id: package.html,v 1.3 2004/03/02 14:33:36 pah Exp $ -->
 <title>Applications</title>
   <meta http-equiv="Content-Type"
  content="text/html; charset=ISO-8859-1"/>
 </head>
-<body></body>
+<body><p>Common code and utilities</p></body>
 </html>
