--- a/astrogrid/workflow/src/java/org/astrogrid/portal/workflow/intf/package.html
+++ b/astrogrid/workflow/src/java/org/astrogrid/portal/workflow/intf/package.html
@@ -1,5 +1,19 @@
 <html>
 	<body>
-		<h1>Public interface to the workflow manager object tree</h1>
+		<h1>Public interface to the workflow system</h1>
+		<b>Replaces classes in the {@link org.astrogrid.portal.workflow.jes} and {@link org.astrogrid.portal.workflow.design} packages.</b>
+		<h2>Usage</h2>
+		Create a {@link org.astrogrid.portal.workflow.intf.WorkflowManagerFactory}, use this to create a 
+		{@link org.astrogrid.portal.workflow.intf.WorkflowManager}. This object provides components to 
+		<ul>
+			<li>Create new workflow objects</li>
+			<li>Query tool registy</li>
+			<li>Work with a myspace store</li>
+			<li>Submit and manage jobs</li>
+		</ul>
+		<h2>Activity Keys</h2>
+		The {@link org.astrogrid.portal.workflow.intf.ActivityKey} provides an implementation of activity keys based on the underlying JXPath methods
+		of the object model.
 	</body>
+	
 </html>
