Started to separate It4.1 interface from general server services

--- a/astrogrid/datacenter/server/src/java/org/astrogrid/datacenter/service/package.html
+++ b/astrogrid/datacenter/server/src/java/org/astrogrid/datacenter/service/package.html
@@ -1,6 +1,13 @@
 <html>
 <body>
-Implements the datacenter web service.
+Datacenter web service implementations.
+
+<h2>Metadata</h2>
+The VOResource element may not be sufficient to describe everything about this
+datacenter that we want to say. Particularly detailed table/column information
+that might be used for building queries.
+<p>So the metadata here must <i>include</i> a VODescription/VOResource element,
+but may include other things.
 
 </body>
 </html>
