--- a/astrogrid/jes/src/java/org/astrogrid/jes/comm/package.html
+++ b/astrogrid/jes/src/java/org/astrogrid/jes/comm/package.html
@@ -1,5 +1,6 @@
 <html>
 	<body>
-		<h1>Abstractions and implementations of communication between the web services</h1>
+		<h1>Interface to a job scheduling system.</h1>
+		This package deines
 	</body>
 </html>
