--- a/astrogrid/jes/src/java/org/astrogrid/jes/impl/workflow/package.html
+++ b/astrogrid/jes/src/java/org/astrogrid/jes/impl/workflow/package.html
@@ -1,7 +1,8 @@
 <html>
 	<body>
-		<h1>Adapter between Workflow and JES object models</h1>
+		<h1>Implementations of Job Factories and stores.</h1>
+		@todo - this package should be renamed org.astrogrid.jes.impl
 		<p />
-		This package implements an adapter layer that makes the generated workflow object implement the interfaces and methods required of the jes object model.
+		This package provides implementations of Job Stores that operate purely in-memory, are persisted to a filesystem, or are persisted to a database.
 	</body>
 </html>
