--- a/astrogrid/jes/src/java/org/astrogrid/jes/job/package.html
+++ b/astrogrid/jes/src/java/org/astrogrid/jes/job/package.html
@@ -1,6 +1,7 @@
 <html>
 	<body>
-		<h1>Interface onto Object Model</h1>
-		Any implementation of a jes object model must support these interfaces. Services only reference these interfaces - allowing impleentation to be altered at a later date.
+		<h1>Inteface to Job Factory and Store</h1>
+		Defines a facade behind which different store and factory implementations may be used. 
+		Main classes are {@link org.astrogrid.jes.job.BeanFacade} and {@link org.astrogrid.jes.job.JobFactory}
 	</body>
 </html>
