--- a/astrogrid/jes/src/java/org/astrogrid/jes/jobmonitor/package.html
+++ b/astrogrid/jes/src/java/org/astrogrid/jes/jobmonitor/package.html
@@ -1,5 +1,5 @@
 <html>
 	<body>
-		<h1>Web interface to JES used by Application Controller</h1>
+		<h1>Job Monitor Componentr</h1>
 	</body>
 </html>
