--- a/astrogrid/mySpace/src/java/org/astrogrid/store/package.html
+++ b/astrogrid/mySpace/src/java/org/astrogrid/store/package.html
@@ -1,12 +1,11 @@
 <html>
 <body>
 The store package defines the representations and delegates used to describe and
-access data in 'VO-Space' - store points on the web that can be reached by
-VO-compliant components.
+access data on store points.
 
-<h3>VO-Space</h3>
+<h3>Store-Space</h3>
 
-VO Space is the set of store points that we assume Astrogrid components must be
+Store-Space is the set of store points that we assume Astrogrid components must be
 able to reach to read from and write to.  This includes local disk space, MySpace,
 FTP servers (for read access at least), Grid FTP servers and Http servers (for read
 access at least).
@@ -17,16 +16,22 @@ and outputs are to be sent in a consistent way, and the software that is expecte
 to use these references can also just call methods on classes in this package
 and expect everything to Just Work.
 
+<h3>VO-Space</h3>
+
+VO-Space is a subset of Store-Space, describing all the store points that
+are 'Registered' with VO Registries and/or Astrogrid Community Registries.  Store points
+such as local files, intranet FTP servers, etc will probably not be part of VO-Space.
+
 <h3>Naming things in VO-Space</h3>
 
 The IVO have created a resource 'identifier' with the scheme <code>ivo:</code> .  Strictly
 speaking this is a resource 'name' as they are intended as Registry lookup keys and cannot
-be used as locators. These are called IVORNs (International Virtual Observatory Resource Names)
-and are represented using the class <code>Ivorn</code>.
+be used as locators. In this package they are referred to as IVORNs (International Virtual Observatory Resource Names)
+and are represented by the class <code>Ivorn</code> in this package but in the common CVS directory.
 
-<h3>Locating things in VO-Space</h3>
+<h3>Locating things in Store-Space</h3>
 
-A location in VO-Space might refer to a file on an FTP server, or a file on a local
+A location in Store-Space might refer to a file on an FTP server, or a file on a local
 disk, or a file in myspace. To represent this we have an AstroGrid Storepoint Locator (AGSL) that
 returns a location to this file, which is represented in turn by the <code>Agsl</code> class.
 
@@ -37,25 +42,14 @@ using the VoSpaceResolver.  The Resolver looks up the IVORN in the Registry and
 Community services to find the relevent Store point, and returns a location in
 the form of an AGSL. The Resolver also has convenience routines for opening
 input and output streams directly to the file named by the IVORN.
+<p>
+[<i>The Resolver is a static 'helper' class; I think it is likely that it's functions
+might be incorporated into VoSpaceClient (see below) but this is TBD. - MCH</i>]
 
 <h3>Setting Results Targets</h3>
 
 Defining where results are to be sent is slightly broader again than VOSpace (eg might include email), and
-is TBD.
-
-<h3>Store Clients</h3>
-
-The StoreClient interface defines the operations that we can reasonably expect any
-store point must be able to implement; operations such as move, copy, create folder,
-list files, upload, download, etc.
-<p>
-A StoreClient implentation is a 'delegate', and it handles all the communication
-required to carry out these operations with <i>a specific store site</i>.  This is
-a 'middle level' delegate.
-<p>
-However users of this package do not need to care about implementations - if you
-want to access a store point, you give your AGSL to the StoreClientFactory and
-get back a StoreClient that you can operate.
+is TBD. [<i>The TargetIndicator in the datacenter project is the prototype for this - MCH</i>]
 
 <h3>Levels of delegates</h3>
 Lower level delegates are those such as soap binding delegates, FTP client software, etc.
@@ -63,14 +57,37 @@ Lower level delegates are those such as soap binding delegates, FTP client softw
 A middle level delegate is a StoreClient implementation that users of this package
 can use to manipulate files on a single Store point using paths and AGSLs.
 <p>
-A top level delegate is similar to a StoreClient but manipulates files in VO-Space
-in general, using IVORNs.  The VoSpaceResolver helps with this but it is not
-complete.
+A top level delegate VoSpaceClient is similar to a StoreClient but manipulates files in VO-Space
+in general, using IVORNs.
+
+<h3>Store Clients</h3>
+
+The StoreClient interface defines the operations that we can reasonably expect any
+store point must implement; operations such as move, copy, create folder,
+list files, upload, download, etc.
+<p>
+A StoreClient implentation is a 'delegate', and it handles all the communication
+required to carry out these operations with <i>a specific store site</i>.  This is
+a 'middle level' delegate.  (There is an abstract class StoreDelegate which implements
+some of the methods in a 'naive' way for convenience).
+<p>
+The core methods that store delegates must implement are providing input and output
+streams to files, and listing files on the store point.
+<p>
+However users of this package do not need to care about implementations - if you
+want to access a store point, you give your AGSL to the StoreClientFactory and
+get back a StoreClient that you can operate.
+<p>
 
 <h3>VoSpace Clients</h3>
-At some point we intend to make a VoSpaceClient that
-will allow file manipulation entirely by IVORNs; that is copy, move, rename, etc
 
+The VoSpaceClient is a class that allows operations 'in general' in VO-Space
+using IVORNs.  This makes it a more abstract layer, and allows us to pass IVORNs
+around our components and store them long term.  If a storepoint moves web address
+and the Registry is updated, an IVORN should remain valid.
+<p>
+However VoSpaceClient limits operations to those storepoints that are Registered
+(ie, those in VoSpace).
 
 </body>
 </html>
