small doc changes

--- a/astrogrid/applications/src/java/org/astrogrid/applications/overview.html
+++ b/astrogrid/applications/src/java/org/astrogrid/applications/overview.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-<!-- $Id: overview.html,v 1.3 2004/03/02 14:33:36 pah Exp $ -->
+<!-- $Id: overview.html,v 1.4 2004/03/24 12:07:19 pah Exp $ -->
 <title>Applications</title>
   <meta http-equiv="Content-Type"
  content="text/html; charset=ISO-8859-1"/>
 </head>
-<body><p>This is the overview...</p></body>
+<body><p>This package forms on part of the <a href="doc-files/CommonExecutionArchitecture.html">Common Execution Architecture</a> </p></body>
 </html>
