small doc reorganize

--- a/astrogrid/applications/xdocs/design/CEADesign.html
+++ b/astrogrid/applications/xdocs/design/CEADesign.html
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="iso-8859-1"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
@@ -7,19 +7,19 @@
 	<meta name="Title" content="IVOA WG Internal Draft" />
 	<meta name="Keywords" content="IVOA, International, Virtual, Observatory, Alliance" />
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	<meta name="author" content="Marco Leoni, Marco.Leoni@eso.org" />
-	<meta name="maintainedBy" content="Marco Leoni, mleoni@eso.org" />
+	<meta name="author" content="Paul Harrison, pah@jb.man.ac.uk" />
+	<meta name="maintainedBy" content="Paul Harrison, pah@jb.man.ac.uk" />
 	<link href="/misc/ivoa_a.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="/misc/ivoa_wg.css" type="text/css" />
 </head>
     	
 <body>
-<?xml version="1.0" encoding="iso-8859-1"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<div class="head">
-<table><tr> <td><a href="http://www.ivoa.net/"><img alt="IVOA" src="/icons/ivoa_logo_small.jpg" border="0"></a></td> </tr></table>
 
-<h1>Document_Title<br>
+<div class="head">
+<table><tr> <td><a href="http://www.ivoa.net/">
+    <img alt="IVOA" src="/icons/ivoa_logo_small.jpg" border="0"/></a></td> </tr></table>
+
+<h1>Document_Title
 Version n.n</h1>
 <h2>IVOA WG Internal Draft YYYY-MM-DD </h2>
 
@@ -108,15 +108,15 @@ Version n.n</h1>
 <br/>
 <h2><a name="appendix">Appendices</a></h2>
 
-<h2><a name="appA">Appendix A:  ...</a></h2>
+<h2><a name="appA">Appendix A:??...</a></h2>
 <p>Appenx A text</p>
 
 
-<h2><a name="appB">Appendix B:  ...</a></h2>
+<h2><a name="appB">Appendix B:??...</a></h2>
 <p>Appendix B text</p>
 
 
-<h2><a name="appC">Appendix C:  ...</a></h2>
+<h2><a name="appC">Appendix C:??...</a></h2>
 <p>Appendix C text</p>
 
 
@@ -125,7 +125,7 @@ Version n.n</h1>
 <h2><a name="references">References</a></h2>
 
 <p>[1] <i>Author1, [Author2[, ...]], Title</i>
-<br><a href="http://www.ivoa.net/Documents/templates">http://www.ivoa.net/Documents/templates</a>
+<a href="http://www.ivoa.net/Documents/templates">http://www.ivoa.net/Documents/templates</a>
 </p>
 
 
